force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Custom_Settings__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Custom_Settings__c</fullName>
    <label>Custom Settings</label>
    <type>DateTime</type>
</CustomField>