force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Exit_Mapping__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Exit_Mapping__c</fullName>
    <label>Exit Mapping</label>
    <type>DateTime</type>
</CustomField>