force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Leave_Rules__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Leave_Rules__c</fullName>
    <label>Leave Rules</label>
    <type>DateTime</type>
</CustomField>