force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Pay_Codes__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Pay_Codes__c</fullName>
    <label>Pay Codes</label>
    <type>DateTime</type>
</CustomField>