force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Schedules__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Schedules__c</fullName>
    <label>Schedules</label>
    <type>DateTime</type>
</CustomField>