force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Update_Public_Holidays_2023__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Update_Public_Holidays_2023__c</fullName>
    <label>Update Public Holidays 2023</label>
    <type>DateTime</type>
</CustomField>