force-app/main/default/objects/tc9_edc__Setup_Core_Data__c/fields/tc9_edc__Update_WR_September_25__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Update_WR_September_25__c</fullName>
    <label>Update WR September 25</label>
    <type>DateTime</type>
</CustomField>